added button hover

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 				</div>
 				
 				<div class="row">
-					<div class="col-md-6 lefty">
+					<div class="col-md-6 lefty directions-marg">
 						<h3>From Downtown Austin</h3>
 						<p>Head east on E 5th St toward Brazos St</p>
 						<p>Turn right onto S I.H. 35</p>
