--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 			
 		</div>
 		
-		<img class="section-img" src="images/park.jpg">
+		<img class="section-img" src="images/park2.jpg">
 		
 		
 		
