added fontface and new imgs

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				
 				<div class="row">
 					<div class="about-main-contain">
-						<h2>About us</h2>
+						<h2>About Us</h2>
 						<div class="col-md-6 lefty ">
 							<img class="img-fix" src="images/dock-large.jpg">
 							
@@ -283,7 +283,7 @@
 			</div>
 		</div>
 		
-		<img class="section-img" src="images/jump.jpg">
+		<img class="section-img more-marg" src="images/mountains.jpg">
 		
 		<div class="location-section skew all-padding" id="spylocation">
 			
