added new hero img

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 			</div>
 		</div>
 		
-		<img class="section-img more-marg" src="images/mountains.jpg">
+		<img class="section-img more-marg" src="images/inside.jpg">
 		
 		<div class="location-section skew all-padding" id="spylocation">
 			
@@ -364,6 +364,8 @@
 				
 			</div>
 		</div>
+
+		<img class="section-img more-marg" src="images/mountains.jpg">
 		
 		<!-- Programs Section -->
 		<div class="programs-section skew all-padding" id="spyprograms">
