cleaning up sass files

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 							</p>
 							
 						</article>
-						<a class="learn-btn btn">LEARN MORE</a>
+						<a class="btn">LEARN MORE</a>
 					</div>
 				</div>
 			</div>
