changed mobile hero height

--- a/index.html
+++ b/index.html
@@ -162,7 +162,8 @@
 	</div>
 	
 	
-	<img class="section-img" src="images/park.jpg">
+
+	<div class="section-img park-img"></div>
 	
 	
 	
@@ -294,7 +295,8 @@
 		</div>
 	</div>
 	
-	<img class="section-img more-marg" src="images/inside.jpg">
+	<!-- <img class="section-img more-marg" src="images/inside.jpg"> -->
+	<div class="section-img store-img"></div>
 	
 	<div class="location-section skew all-padding" id="spylocation">
 		
@@ -377,7 +379,8 @@
 			
 		</div>
 	</div>
-	<img class="section-img more-marg" src="images/mountains.jpg">
+	
+	<div class="section-img outside-img"></div>
 	
 	<!-- Programs Section -->
 	<div class="programs-section skew all-padding" id="spyprograms">
