--- a/lessons.html
+++ b/lessons.html
@@ -24,9 +24,10 @@
 					</div>
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
 					<span class="sr-only">Toggle navigation</span>
+						<span class="menu">MENU</span>
+				<!-- 	<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
+					<span class="icon-bar"></span> -->
 					</button>
 					
 				</div>
