--- a/info.html
+++ b/info.html
@@ -47,7 +47,8 @@
 		</nav>
 		
 		<!-- //Close Fixed Nav -->
-		<div class="info-hero item" ></div>
+		<div class="item info-hero" ></div>
+
 		<div class="info-section skew all-padding" id="spystory">
 			<section class="container skew-fix" >
 				
