--- a/firsttime.html
+++ b/firsttime.html
@@ -50,7 +50,7 @@
 		</nav>
 		
 		<!-- //Close Fixed Nav -->
-		<div class="questions-hero item"></div>
+		<div class="questions-hero item" id="spytop"></div>
 		
 		
 		<!-- Full Screen Landing Section -->
