--- a/info.html
+++ b/info.html
@@ -64,7 +64,7 @@
 						<div class="col-md-6 col-md-pull-6 ">
 							<h3>Your local Cable Park</h3>
 				<p>Quest ATX is Austin’s first and only cable wakepark with big ambition to become a complete action sports destination. Set on 130 uniquely-manicured acres, and located close to the new Circuit of the Americas, Quest ATX is a world class wakeboarding facility. The park is equipped with a six-tower Sesitec system, UNIT Parktec rails and a System 2.0. Pairing Austin’s ‘Keep It Weird’ vibe with a of land of endless possibilities, Quest ATX is set to be one of the most unique cable wakeboard parks in the United States.</p>
-					<p>The Quest staff has over a decade of experience in the cable wake boarding industry as well as a love for Austin’s outdoor active lifestyle. Their goal for Quest ATX is to promote that lifestyle for all ages, throughout Austin, and it’s surrounding communities.</p>
+				<!-- 	<p>The Quest staff has over a decade of experience in the cable wake boarding industry as well as a love for Austin’s outdoor active lifestyle. Their goal for Quest ATX is to promote that lifestyle for all ages, throughout Austin, and it’s surrounding communities.</p> -->
 							<div class="history-section">
 								<h3>History of Quest ATX</h3>
 									<p>Twenty-two years ago, a group of watersport enthusiasts were looking for the right property to create the perfect lake. After years of searching they felt they were on a quest for the perfect property. They found that property in Southeast Austin and after years of enjoyment, they decided to take the facility to the next level and develop a full-sized cable park – and Quest ATX was born.</p>
