--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
 							</div>
 						</div>
 						
-						<div class="item third">
-							<!-- <img src="images/dock-start.jpg" alt="..."> -->
+						<!-- <div class="item third">
+							<img src="images/dock-start.jpg" alt="...">
 							<div class="carousel-caption">
 								
 							</div>
-						</div>
+						</div> -->
 						<div class="item fourth">
 							<!-- <img src="images/dock-start.jpg" alt="..."> -->
 							<div class="carousel-caption">
