adjusting wavier btn

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 		
 				<h2><span class="line"></span>Wavier<span class="line"></span></h2>
 				<p>Save time in line and sign our waiver online.</p>
-				<div class="btn wavier-btn">SIGN OUR WAVIER</div>
+				<div class="wavier-btn">SIGN OUR WAVIER</div>
 
 				
 			</div>
