fixed spelling on waiver section, made img and paragraph spacing adjustments

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<!-- <a href="#spytop">Home</a></li> -->
 						<li><a href="#spyabout">ABOUT</a></li>
-						<li><a href="#spywavier">WAVIER</a></li>
+						<li><a href="#spywavier">WAIVER</a></li>
 						
 						<li><a href="#spypasses">PRICES</a></li>
 						<li><a href="#spylocation">LOCATION</a></li>
@@ -168,9 +168,9 @@
 			
 			<div class="row">
 		
-				<h2><span class="line"></span>Wavier<span class="line"></span></h2>
+				<h2><span class="line"></span>Waiver<span class="line"></span></h2>
 				<p>Save time in line and sign our waiver online.</p>
-				<div class="wavier-btn">SIGN OUR WAVIER</div>
+				<div class="wavier-btn">SIGN OUR WAIVER</div>
 
 				
 			</div>
