--- a/firsttime.html
+++ b/firsttime.html
@@ -19,7 +19,7 @@
 					<div class="logo">
 						<h1>Quest
 						</h1>
-						<p class="logo-fix">FAQs</p>
+						<p>ATX</p>
 						
 					</div>
 					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
