--- a/firsttime.html
+++ b/firsttime.html
@@ -35,7 +35,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<!-- <a href="#spytop">Home</a></li> -->
 						<li><a href="index.html#spyabout">ABOUT</a></li>
-						<li><a href="index.html#spywavier">WAIVER</a></li>
+						<li><a href="index.html#spywaiver">WAIVER</a></li>
 						
 						<li><a href="index.html#spypasses">PRICES</a></li>
 						<li><a href="index.html#spylocation">LOCATION</a></li>
