--- a/info.html
+++ b/info.html
@@ -35,7 +35,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<!-- <a href="#spytop">Home</a></li> -->
 							<li><a href="index.html#spyabout">ABOUT</a></li>
-						<li><a href="index.html#spywavier">WAIVER</a></li>
+								<li><a href="#spywaiver">WAIVER</a></li>
 						
 						<li><a href="index.html#spypasses">PRICES</a></li>
 						<li><a href="index.html#spylocation">LOCATION</a></li>
@@ -175,7 +175,7 @@
 						<input type="text" placeholder="First Name" />
 						<input type="text" placeholder="Last Name" />
 						<input type="text" placeholder="Email"/>
-						<input type="submit" class="form-btn btn" />
+						<input type="submit" class="form-btn " />
 					</form>
 				</div>
 			</div>
