fixed button spacing

--- a/firsttime.html
+++ b/firsttime.html
@@ -49,7 +49,7 @@
 		</nav>
 		
 		<!-- //Close Fixed Nav -->
-		<div class="questions-hero item" id="spytop"></div>
+		<div class="questions-hero pages-hero" id="spytop"></div>
 		
 		
 		<!-- Full Screen Landing Section -->
