--- a/info.html
+++ b/info.html
@@ -51,7 +51,7 @@
 		</nav>
 		
 		<!-- //Close Fixed Nav -->
-		<div class="item info-hero" id="spytop" ></div>
+		<div class=" info-hero pages-hero" id="spytop" ></div>
 
 		<div class="info-section skew all-padding" id="spystory">
 			<section class="container skew-fix" >
