--- a/lessons.html
+++ b/lessons.html
@@ -51,7 +51,7 @@
 		</nav>
 		
 		<!-- //Close Fixed Nav -->
-		<div class="lessons-hero item" id="spytop"></div>
+		<div class="lessons-hero pages-hero" id="spytop"></div>
 		<div class="lessons-info-section skew all-padding" id="spylessons">
 			<section class="container skew-fix" >
 				
