added info to standard equipment/ added new class for heros

--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
 								<li class="col-sm-4 rental-prices">
 									<div class="rental-bar-large"></div>
 									<span class="small-ul">Standard Equipment</span><br>
+									<span class="small-ul rent">board, skis, kneeboard, helmet, and life jacket</span>
 									
 									<span class="big-ul">$5</span>
 								</li>
@@ -300,12 +301,12 @@
 										<div class="rental-circle none"></div>
 									</div>
 									<span class="small-ul">Advanced Boards</span><br>
-									<span class="big-ul">$20</span>
+									<span class="big-ul add-pad">$20</span>
 								</li>
 								<li class="col-sm-4 rental-prices">
 									<div class="rental-bar-large"></div>
 									<span class="small-ul">Kayaks and SUP</span><br>
-									<span class="big-ul">$<span class="kern">1</span>0</span>
+									<span class="big-ul add-pad">$<span class="kern">1</span>0</span>
 								</li>
 							</ul>
 							
