added href to logo on all pages

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 			<div class="container">
 				<div class="navbar-header">
 					<div class="logo">
-						<h1>Quest
-						</h1>
+							<a href="#spytop"><h1>Quest</h1></a>
 						<p>ATX</p>
 						
 					</div>
