--- a/lessons.html
+++ b/lessons.html
@@ -17,8 +17,7 @@
 			<div class="container">
 				<div class="navbar-header">
 					<div class="logo">
-						<h1>Quest
-						</h1>
+							<a href="index.html"><h1>Quest</h1></a>
 						<p>ATX</p>
 						
 					</div>
