fixed hero img breakpoints

--- a/firsttime.html
+++ b/firsttime.html
@@ -54,7 +54,7 @@
 		<!-- Full Screen Landing Section -->
 		
 		
-		<div class="first-time-section skew all-padding" id="spyabout">
+		<div class="first-time-section skew " id="spyabout">
 			<section class="container skew-fix" >
 				
 				
