--- a/index.html
+++ b/index.html
@@ -300,12 +300,14 @@
 										<div class="rental-circle none"></div>
 									</div>
 									<span class="small-ul">Advanced Boards</span><br>
-									<span class="big-ul add-pad">$20</span>
+									<span class="small-ul rent">for use on kickers and rails </span>
+									<span class="big-ul">$20</span>
 								</li>
 								<li class="col-sm-4 rental-prices">
 									<div class="rental-bar-large"></div>
-									<span class="small-ul">Kayaks and SUP</span><br>
-									<span class="big-ul add-pad">$<span class="kern">1</span>0</span>
+									<span class="small-ul">Kayaks or SUP</span><br>
+									<span class="small-ul rent">boards, boats, and paddles </span>
+									<span class="big-ul">$<span class="kern">1</span>0</span>
 								</li>
 							</ul>
 							
