changed slider icons

--- a/info.html
+++ b/info.html
@@ -162,7 +162,7 @@
 		</section>
 		
 	</div>
-	<div class="info-section skew all-padding" id="spymail">
+	<div class="form-section skew all-padding" id="spymail">
 		<section class="container skew-fix" >
 			
 			<h2>Join our mailing list</h2>
