--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 					</div>
 					<!-- Controls -->
 					<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+				<span class="left-chev"></span>
 						<!-- <span class="sr-only">Previous</span> -->
 					</a>
 					<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+							<span class="right-chev"></span>
 						<!-- <span class="sr-only">Next</span> -->
 					</a>
 				</div>
