--- a/lessons.html
+++ b/lessons.html
@@ -57,7 +57,7 @@
 				
 				<div class="row">
 					<div class="clear">
-						<h2>Come learn with us</h2>
+						<h2><span class="lessons-kern">C</span>ome learn with us</h2>
 						<div class="col-md-6 col-md-push-6 righty  ">
 							<img class="img-fix" src="images/yeah-girl.jpg">
 							
