--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 					<div class="about-main-contain">
 						<h2><span class="line"></span>About Us<span class="line"></span></h2>
 						<div class="col-md-6 lefty ">
-							<img class="img-fix" src="images/dock-large.jpg">
+							<img class="img-fix" src="images/dock-large1.jpg">
 							
 							<h3>Your local Cable Park</h3>
 							<article>
@@ -139,7 +139,7 @@
 							<a class="read-btn btn" href="info.html">READ MORE</a>
 						</div>
 						<div class="col-md-6 righty">
-							<img class="img-fix" src="images/kid-large.jpg">
+							<img class="img-fix" src="images/kid-large1.jpg">
 							<h3>What is cable wakeboarding?</h3>
 							<article>
 								<p>Cable wakeboarding is simply wakeboarding while being
