--- a/info.html
+++ b/info.html
@@ -60,7 +60,7 @@
 					<div class="clear">
 						<h2>Our Story</h2>
 						<div class="col-md-6 col-md-push-6 righty  ">
-							<img class="img-fix" src="images/kids.jpg">
+							<img class="img-fix" src="images/kids1.jpg">
 							
 							
 						</div>
