added 3+ to lessons

--- a/lessons.html
+++ b/lessons.html
@@ -128,7 +128,7 @@ Click here to schedule lessons online. More information on pricing and what each
 								<span class="big-ul">$65</span>
 							</li>
 							<li>
-								<span class="small-ul ">Group</span><br>
+								<span class="small-ul ">Group (3+)</span><br>
 								<span class="big-ul">$40</span>
 							</li>
 						</ul>
@@ -154,8 +154,8 @@ Click here to schedule lessons online. More information on pricing and what each
 								<span class="big-ul">$75</span>
 							</li>
 							<li>
-								<span class="small-ul ">Group</span><br>
-								<span class="big-ul">$50</span>
+								<span class="small-ul ">Group (3+)</span><br>
+								<span class="big-ul">$50 </span>
 							</li>
 						</ul>
 						
