--- a/lessons.html
+++ b/lessons.html
@@ -59,7 +59,7 @@
 					<div class="clear">
 						<h2><span class="lessons-kern">C</span>ome learn with us</h2>
 						<div class="col-md-6 col-md-push-6 righty  ">
-							<img class="img-fix" src="images/yeah-girl.jpg">
+							<img class="img-fix" src="images/yeah-girl.jpg" alt="photo of girl giving the rock on sign next to a wakeboard">
 							
 							
 						</div>
