fixing responsive headers

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="item second">
                         <div class="carousel-caption"></div>
                     </div>
-                    <div class="item fourth">
+                    <div class="item third">
                         <div class="carousel-caption"></div>
                     </div>
                 </div><!-- Controls -->
